@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.677 2005-06-10 17:06:45 castaglia Exp $
+$Id: NEWS,v 1.678 2005-06-12 04:42:10 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -33,6 +33,7 @@ CVS
 - Bug 2250 - Add ports, compiling info to FreeBSD README.
 - Bug 2631 - Segfault when using RadiusAcctServer.
 - Bug 2632 - Invalid application of `sizeof' to an incomplete type on AIX.
+- Bug 2637 - <Limit STAT> does not work.
 
 1.3.0rc1 - Released 10-Apr-2005
 --------------------------------
